added go to speaker details functionality

--- a/AngularBreeze/AB.Web/AB.Web.csproj
+++ b/AngularBreeze/AB.Web/AB.Web.csproj
@@ -152,6 +152,7 @@
     <Content Include="app\session\sessions.html" />
     <Content Include="app\session\sessions.js" />
     <Content Include="app\speaker\speakerdetail.html" />
+    <Content Include="app\speaker\speakerdetail.js" />
     <Content Include="app\speaker\speakers.html" />
     <Content Include="app\speaker\speakers.js" />
     <Content Include="App_Data\CodeCamper.sdf" />
